[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
doctest = false

[[bin]]
path = "src/main.rs"
name = "zero2prod"
test = false

[dependencies]
actix-web = "=4.0.0-beta.19"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = "0.11"
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "=0.5.0-beta.9"
serde-aux = "3"
unicode-segmentation = "1"
validator = "0.14"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1"
anyhow = "1"
base64 = "0.13"
argon2 = { version = "0.3" , features = ["std"] }

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
once_cell = "1"
claim = "0.5"
fake = "~2.3"
quickcheck = "0.9"
quickcheck_macros = "0.9"
tokio = { version = "1", features = ["macros", "rt"] }
wiremock = "0.5"
linkify = "0.8"
